--- a/section/contact.html
+++ b/section/contact.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contact us to learn more about reading, best-sellers, gender and the best ways for your child to learn to read.">
+    <meta name="keywords" content="child, read, best-sellers, teach, New York Times, 2021, reading, book, genre, raking, boy, girl">
     <link rel="icon" type="image/png" href="../images/book.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,42 +12,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Library</title>
+    <title>Library Contact</title>
   </head>
   <body>
-    <div class="container-fluid p-0 mb-5">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
+      <figure>
         <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
+      </figure>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../section/genre.html">Genre</a>
+                <a class="nav-link" href="../section/genre.html">Genre</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="../section/kids.html">Kids</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../section/kids.html">Kids</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../section/contact.html">Contact</a>
+                <a class="nav-link" href="../section/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex justify-content-end">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-secondary border-0" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-secondary border-0" type="submit">Search</button>
           </form>
         </div>
-      </nav>
-    </div>
-    <div class="container contacto d-flex align-items-center flex-column">
-      <p class="title__bestsellers anima animate__animated animate__backInLeft mb-3">You can contact us!</p>
+    </nav>
+    <section class="container padding-section contacto d-flex align-items-center flex-column">
+      <h1 class="title__bestsellers anima animate__animated animate__backInLeft mb-4">You can contact us!</h1>
       <div class="col-12 col-lg-8 col-md-9">
         <form>
           <div class="mb-3 row">
@@ -85,25 +87,27 @@
           </div>
         </form>
       </div>
-    </div>
-    <div class="container mt-5">
-      <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">Or you can download our app!</p>
+    </section>
+    <section class="container mt-5">
+      <h1 class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">Or you can download our app!</h1>
         <div class="rrss d-flex justify-content-center mt-5">
-          <div class="m-4"><a class="p-2" href="#"><img src="../images/google-play.png" alt="Google Play"></a></div>
-          <div class="m-4"><a class="p-2" href="#"><img src="../images/app-store.png" alt="App Store"></a></div>
+          <figure class="m-4"><a rel="noopener" class="p-2" href="#"><img src="../images/google-play.png" alt="Google Play"></a></figure>
+          <figure class="m-4"><a rel="noopener" class="p-2" href="#"><img src="../images/app-store.png" alt="App Store"></a></figure>
         </div>
-    </div>
-    <div class="container-fluid p-0 bg-light mt-5">
+    </section>
+    <footer class="container-fluid p-0 bg-light mt-5">
       <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-        <img src="../images/book.png" alt="Book">
+        <figure>
+          <img src="../images/book.png" alt="Book">
+        </figure>
         <p class="animate__animated animate__pulse">All rights reserved</p>
         <div class="rrss">
-          <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-          <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-          <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+          <div><a rel="noopener" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+          <div><a rel="noopener" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+          <div><a rel="noopener" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
         </div>
       </div>
-    </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
