--- a/section/kids.html
+++ b/section/kids.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="How to teach a child to read a book in 3 simple steps.">
+    <meta name="keywords" content="child, read, teach, reading, book, genre, boy, girl">
     <link rel="icon" type="image/png" href="../images/book.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,69 +12,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Library</title>
+    <title>Library Kids</title>
   </head>
   <body>
-    <div class="container-fluid p-0 mb-5">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
-            <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../section/genre.html">Genre</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="../section/kids.html">Kids</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../section/contact.html">Contact</a>
-                </li>
-            </ul>
-            <form class="d-flex justify-content-end">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary border-0" type="submit">Search</button>
-            </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
+      <figure>
+        <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
+      </figure>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../section/genre.html">Genre</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="../section/kids.html">Kids</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../section/contact.html">Contact</a>
+            </li>
+          </ul>
+          <form class="d-flex justify-content-end">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-secondary border-0" type="submit">Search</button>
+          </form>
         </div>
-        </nav>
-    </div>
-    <div class="container container__kids">
-        <p class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</p>
+    </nav>
+    <section class="container padding-section container__kids">
+        <h1 class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</h1>
         <div class=" d-flex flex-column align-items-center">
-            <p class="p-2">1. READ ALOUD TO YOUR CHILD </p>
-            <div class="overflow-hidden img-fluid"><img src="../images/boyreading.jpg" alt="Boy reading with his mom"></div>
+            <h3 class="p-2">1. READ ALOUD TO YOUR CHILD </h3>
+            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading.jpg" alt="Boy reading with his mom"></figure>
             <p class="p-5">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
         </div>
         <div class=" d-flex flex-column align-items-center">
-        <p class="p-2">2. ASK QUESTIONS</p>
-            <div class="overflow-hidden img-fluid"><img src="../images/boyreading5.jpg" alt="Boy reading"></div>
+        <h3 class="p-2">2. ASK QUESTIONS</h3>
+            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading5.jpg" alt="Boy reading"></figure>
             <p class="p-5">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
         </div>
         <div class=" d-flex flex-column align-items-center">
-            <p class="p-2">3. BE A GOOD (READING) EXAMPLE</p>
-            <div class="overflow-hidden img-fluid"><img src="../images/boyreading4.jpg" alt="Boy reading with his dad"></div>
+            <h3 class="p-2">3. BE A GOOD (READING) EXAMPLE</h3>
+            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading4.jpg" alt="Boy reading with his dad"></figure>
             <p class="p-5">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
         </div>
-    </div>
-    <div class="container-fluid p-0 bg-light mt-5">
-        <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-            <img src="../images/book.png" alt="Book">
-            <p class="animate__animated animate__pulse">All rights reserved</p>
-            <div class="rrss">
-                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
-            </div>
+    </section>
+    <footer class="container-fluid p-0 bg-light mt-5">
+      <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+        <figure>
+          <img src="../images/book.png" alt="Book">
+        </figure>
+        <p class="animate__animated animate__pulse">All rights reserved</p>
+        <div class="rrss">
+          <div><a rel="noopener" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+          <div><a rel="noopener" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+          <div><a rel="noopener" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
         </div>
-    </div>
+      </div>
+    </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
