add cambios tercera entrega

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-      <figure>
-        <a href="index.html"><img src="images\book.png" alt="Book"></a>
+      <figure class="img-banner">
       </figure>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -140,66 +139,107 @@
         </div>
       </header>
       <article class="list-reading-books d-flex flex-column justify-content-start mt-5">
-          <h3>Importance of Reading Books</h3>
-          <p>There are multiple benefits of reading books. From building your vocabulary to reducing stress and depression. The importance of reading is completely undeniable. The next time someone asks you: “Why is reading important?” you will have an educated and thorough answer to respond with. If you’re not the biggest fan of books, that’s ok! You’re not alone! But before you shut down books and reading all together, take the time to learn more about the importance of reading and all the incredible benefits that come with it. Here’re 10 benefits of reading to get you to start reading.</p>
-          <figure class="img-readingbooks"><img class="img-fluid" src="images\readingbook.jpg" alt="Book"></figure>
-          <h3 class="mt-5">1. Mental Stimulation</h3>
-          <p>Studies have shown that staying mentally stimulated can slow the progress of (or possibly even prevent) Alzheimer’s and Dementia, since keeping your brain active and engaged prevents it from losing power.
-            Just like any other muscle in the body, the brain requires exercise to keep it strong and healthy, so the phrase “use it or lose it” is particularly apt when it comes to your mind. Doing puzzles and playing games such as chess have also been found to be helpful with cognitive stimulation.</p>
-          <h3>2. Stress Reduction</h3>
+        <div class="row">
+          <div class="col">
+            <h3>Importance of Reading Books</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-lg-7 col-12 d-flex align-items-center"><figure class="img-readingbooks"><img class="img-fluid slide-in-fwd-center" src="images\readingbook.jpg" alt="Book"></figure></div>
+          <div class="col">
+            <h3 class="mt-5">1. Mental Stimulation</h3>
+            <p>Studies have shown that staying mentally stimulated can slow the progress of (or possibly even prevent) Alzheimer’s and Dementia, since keeping your brain active and engaged prevents it from losing power.
+              Just like any other muscle in the body, the brain requires exercise to keep it strong and healthy, so the phrase “use it or lose it” is particularly apt when it comes to your mind. Doing puzzles and playing games such as chess have also been found to be helpful with cognitive stimulation.</p></div>
+        </div>
+        <div class="row">
+          <div class="col mt-5">
+            <h3>2. Stress Reduction</h3>
           <p>No matter how much stress you have at work, in your personal relationships, or countless other issues faced in daily life, it all just slips away when you lose yourself in a great story. A well-written novel can transport you to other realms, while an engaging article will distract you and keep you in the present moment, letting tensions drain away and allowing you to relax.</p>
-          <h3>3. Knowledge</h3>
-          <figure class="img-readingbooks"><img class="img-fluid" src="images\girlwithbook.jpg" alt="Girl with a book"></figure>
-          <p class="mt-5">Everything you read fills your head with new bits of information, and you never know when it might come in handy. The more knowledge you have, the better-equipped you are to tackle any challenge you’ll ever face.
-            Additionally, here’s a bit of food for thought: should you ever find yourself in dire circumstances, remember that although you might lose everything else—your job, your possessions, your money, even your health—knowledge can never be taken from you.</p>
-          <h3>4. Vocabulary Expansion</h3>
-          <p>This goes with the above topic:
-            The more you read, the more words you gain exposure to, and they’ll inevitably make their way into your everyday vocabulary.
-            Being articulate and well-spoken is of great help in any profession, and knowing that you can speak to higher-ups with self-confidence can be an enormous boost to your self-esteem. It could even aid in your career, as those who are well-read, well-spoken, and knowledgeable on a variety of topics tend to get promotions more quickly (and more often) than those with smaller vocabularies and lack of awareness of literature, scientific breakthroughs, and global events.
-            Reading books is also vital for learning new languages, as non-native speakers gain exposure to words used in context, which will ameliorate their own speaking and writing fluency.</p>
-          <h3>5. Memory Improvement</h3>
-          <figure class="img-readingbooks"><img class="img-fluid" src="images\twobooks.jpg" alt="Two books"></figure>
-          <p class="mt-5">When you read a book, you have to remember an assortment of characters, their backgrounds, ambitions, history, and nuances, as well as the various arcs and sub-plots that weave their way through every story. That’s a fair bit to remember, but brains are marvellous things and can remember these things with relative ease.
-            Amazingly enough, every new memory you create forges new synapses (brain pathways) and strengthens existing ones, which assists in short-term memory recall as well as stabilizing moods.How cool is that?</p>
-          <h3>6. Stronger Analytical Thinking Skills</h3>
-          <p>Have you ever read an amazing mystery novel, and solved the mystery yourself before finishing the book? If so, you were able to put critical and analytical thinking to work by taking note of all the details provided and sorting them out to determine “whodunnit”.
-            That same ability to analyze details also comes in handy when it comes to critiquing the plot; determining whether it was a well-written piece, if the characters were properly developed, if the storyline ran smoothly, etc.
-            Should you ever have an opportunity to discuss the book with others, you’ll be able to state your opinions clearly, as you’ve taken the time to really consider all the aspects involved.</p>
-          <h3>7. Improved Focus and Concentration</h3>
-          <figure class="img-readingbooks"><img class="img-fluid" src="images\goldenbook.jpg" alt="Book in golden hour"></figure>
-          <p class="mt-5">In our internet-crazed world, attention is drawn in a million different directions at once as we multi-task through every day.
-            In a single 5-minute figure, the average person will divide their time between working on a task, checking email, chatting with a couple of people (via gchat, skype, etc.), keeping an eye on twitter, monitoring their smartphone, and interacting with co-workers. This type of ADD-like behaviour causes stress levels to rise, and lowers our productivity.
-            When you read a book, all of your attention is focused on the story—the rest of the world just falls away, and you can immerse yourself in every fine detail you’re absorbing.
-            Try reading for 15-20 minutes before work (i.e. on your morning commute, if you take public transit), and you’ll be surprised at how much more focused you are once you get to the office.</p>
-          <h3>8. Better Writing Skills</h3>
-          <p>This goes hand-in-hand with the expansion of your vocabulary:
-            Exposure to published, well-written work has a noted effect on one’s own writing, as observing the cadence, fluidity, and writing styles of other authors will invariably influence your own work.
-            In the same way that musicians influence one another and painters use techniques established by previous masters, so do writers learn how to craft prose by reading the works of others.</p>
-          <h3>9. Tranquility</h3>
-          <figure class="img-readingbooks"><img class="img-fluid" src="images\tranquility.jpg" alt="Tranquility"></figure>
-          <p class="mt-5">In addition to the relaxation that accompanies reading a good book, it’s possible that the subject you read about can bring about immense inner peace and tranquility.
-            Reading spiritual texts can lower blood pressure and bring about an immense sense of calm, while reading self-help books has been shown to help people suffering from certain mood disorders and mild mental illnesses.</p>
-          <h3>10. Free Entertainment</h3>
-          <p>Though many of us like to buy books so we can annotate them and dog-ear pages for future reference, they can be quite pricey.
-            For low-budget entertainment, you can visit your local library and bask in the glory of the countless tomes available there for free. Libraries have books on every subject imaginable, and since they rotate their stock and constantly get new books, you’ll never run out of reading materials.
-            If you happen to live in an area that doesn’t have a local library, or if you’re mobility-impaired and can’t get to one easily, most libraries have their books available in PDF or ePub format so you can read them on your e-reader, iPad, or your computer screen.
-            There are also many sources online where you can download free e-books, so go hunting for something new to read!
-            There’s a reading genre for every literate person on the planet, and whether your tastes lie in classical literature, poetry, fashion magazines, biographies, religious texts, young adult books, self-help guides, street lit, or romance novels, there’s something out there to capture your curiosity and imagination.
-            Step away from your computer for a little while, crack open a book, and replenish your soul for a little while.</p>
+          </div>
+        </div>
+        <div class="row">          
+          <div class="col d-flex flex-column justify-content-center">
+            <h3>3. Knowledge</h3>
+            <p>Everything you read fills your head with new bits of information, and you never know when it might come in handy. The more knowledge you have, the better-equipped you are to tackle any challenge you’ll ever face.
+              Additionally, here’s a bit of food for thought: should you ever find yourself in dire circumstances, remember that although you might lose everything else—your job, your possessions, your money, even your health—knowledge can never be taken from you.</p></div>
+          <div class="col col-lg-7 col-12 d-flex justify-content-center"><figure class="img-readingbooks"><img class="img-fluid slide-in-fwd-center" src="images\girlwithbook.jpg" alt="Girl with a book"></figure></div>
+        </div>
+        <div class="row">
+          <div class="col mt-5">
+            <h3>4. Vocabulary Expansion</h3>
+            <p>This goes with the above topic:
+              The more you read, the more words you gain exposure to, and they’ll inevitably make their way into your everyday vocabulary.
+              Being articulate and well-spoken is of great help in any profession, and knowing that you can speak to higher-ups with self-confidence can be an enormous boost to your self-esteem. It could even aid in your career, as those who are well-read, well-spoken, and knowledgeable on a variety of topics tend to get promotions more quickly (and more often) than those with smaller vocabularies and lack of awareness of literature, scientific breakthroughs, and global events.
+              Reading books is also vital for learning new languages, as non-native speakers gain exposure to words used in context, which will ameliorate their own speaking and writing fluency.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-lg-5 col-12 d-flex justify-content-center"><figure class="img-readingbooks"><img class="img-fluid slide-in-fwd-center twobooks" src="images\twobooks.jpg" alt="Two books"></figure></div>
+          <div class="col d-flex justify-content-center flex-column">
+            <h3>5. Memory Improvement</h3>
+            <p>When you read a book, you have to remember an assortment of characters, their backgrounds, ambitions, history, and nuances, as well as the various arcs and sub-plots that weave their way through every story. That’s a fair bit to remember, but brains are marvellous things and can remember these things with relative ease.
+              Amazingly enough, every new memory you create forges new synapses (brain pathways) and strengthens existing ones, which assists in short-term memory recall as well as stabilizing moods.How cool is that?</p>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col mt-5">
+            <h3>6. Stronger Analytical Thinking Skills</h3>
+            <p>Have you ever read an amazing mystery novel, and solved the mystery yourself before finishing the book? If so, you were able to put critical and analytical thinking to work by taking note of all the details provided and sorting them out to determine “whodunnit”.
+              That same ability to analyze details also comes in handy when it comes to critiquing the plot; determining whether it was a well-written piece, if the characters were properly developed, if the storyline ran smoothly, etc.
+              Should you ever have an opportunity to discuss the book with others, you’ll be able to state your opinions clearly, as you’ve taken the time to really consider all the aspects involved.</p>
+          </div>
+        </div>
+        <div class="row">          
+          <div class="col d-flex flex-column justify-content-center">
+            <h3>7. Improved Focus and Concentration</h3>
+            <p>In our internet-crazed world, attention is drawn in a million different directions at once as we multi-task through every day.
+              In a single 5-minute figure, the average person will divide their time between working on a task, checking email, chatting with a couple of people (via gchat, skype, etc.), keeping an eye on twitter, monitoring their smartphone, and interacting with co-workers. This type of ADD-like behaviour causes stress levels to rise, and lowers our productivity.
+              When you read a book, all of your attention is focused on the story—the rest of the world just falls away, and you can immerse yourself in every fine detail you’re absorbing.
+              Try reading for 15-20 minutes before work (i.e. on your morning commute, if you take public transit), and you’ll be surprised at how much more focused you are once you get to the office.</p>
+            </div>
+          <div class="col col-lg-7 col-12 d-flex justify-content-center"><figure class="img-readingbooks"><img class="img-fluid slide-in-fwd-center" src="images\goldenbook.jpg" alt="Book in golden hour"></figure></div>
+        </div>
+        <div class="row">
+          <div class="col mt-5">
+            <h3>8. Better Writing Skills</h3>
+            <p>This goes hand-in-hand with the expansion of your vocabulary:
+              Exposure to published, well-written work has a noted effect on one’s own writing, as observing the cadence, fluidity, and writing styles of other authors will invariably influence your own work.
+              In the same way that musicians influence one another and painters use techniques established by previous masters, so do writers learn how to craft prose by reading the works of others.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-lg-5 col-12 d-flex justify-content-center"><figure class="img-readingbooks"><img class="img-fluid slide-in-fwd-center" src="images\tranquility.jpg" alt="Tranquility"></figure></div>
+          <div class="col d-flex justify-content-center flex-column">
+            <h3>9. Tranquility</h3>
+            <p>In addition to the relaxation that accompanies reading a good book, it’s possible that the subject you read about can bring about immense inner peace and tranquility.
+              Reading spiritual texts can lower blood pressure and bring about an immense sense of calm, while reading self-help books has been shown to help people suffering from certain mood disorders and mild mental illnesses.</p>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col mt-5">
+            <h3>10. Free Entertainment</h3>
+            <p>Though many of us like to buy books so we can annotate them and dog-ear pages for future reference, they can be quite pricey.
+              For low-budget entertainment, you can visit your local library and bask in the glory of the countless tomes available there for free. Libraries have books on every subject imaginable, and since they rotate their stock and constantly get new books, you’ll never run out of reading materials.
+              If you happen to live in an area that doesn’t have a local library, or if you’re mobility-impaired and can’t get to one easily, most libraries have their books available in PDF or ePub format so you can read them on your e-reader, iPad, or your computer screen.
+              There are also many sources online where you can download free e-books, so go hunting for something new to read!
+              There’s a reading genre for every literate person on the planet, and whether your tastes lie in classical literature, poetry, fashion magazines, biographies, religious texts, young adult books, self-help guides, street lit, or romance novels, there’s something out there to capture your curiosity and imagination.
+              Step away from your computer for a little while, crack open a book, and replenish your soul for a little while.</p>
+          </div>
+        </div>
       </article>
     </section>
     <footer class="container-fluid p-0 bg-light mt-5">
       <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-        <figure>
-          <img src="./images/book.png" alt="Book">
+        <figure class="img-banner">
         </figure>
         <p class="animate__animated animate__pulse">All rights reserved</p>
         <div class="rrss">
           <div class="rrss-fb"><a rel="noopener" href="#">
-            <!-- <img src="./images/facebook.png" alt="Facebook"> -->
           </a></div>
-          <div><a rel="noopener" href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
-          <div><a rel="noopener" href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
+          <div class="rrss-ig"><a rel="noopener" href="#">
+          </a></div>
+          <div class="rrss-tw"><a rel="noopener" href="#">
+          </a></div>
         </div>
       </div>
     </footer>
