--- a/section/bestsellers.html
+++ b/section/bestsellers.html
@@ -16,8 +16,7 @@
   </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-            <figure>
-              <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
+            <figure class="img-banner">
             </figure>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,10 +24,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
+                    <a class="nav-link active" href="../section/bestsellers.html">Bestsellers</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="../section/genre.html">Genre</a>
@@ -45,11 +44,13 @@
                     <button class="btn btn-secondary border-0" type="submit">Search</button>
                 </form>
               </div>
-        </nav>
+          </nav>
         <section class="container padding-section mb-5 d-flex flex-column align-items-center">
             <header>
                 <h1 class="title__bestsellers anima animate__animated animate__backInLeft">How bestseller lists actually work</h1>
-                <figure><img class="mb-3 mt-3 img-fluid" src="../images/bestsellers.jpg" alt="Best Sellers"></figure>
+                <figure class="img-bestsellers">
+                    <!-- <img class="mb-3 mt-3 img-fluid" src="../images/bestsellers.jpg" alt="Best Sellers"> -->
+                </figure>
             </header>
             <div class="description">
                 <h3><strong>The New York Times bestseller list</strong></h3>
@@ -80,14 +81,14 @@
         </section>
         <article class="container container-cards">
             <h1 class="title__bestsellers anima animate__animated animate__backInLeft">Details of The New York Times Best Sellers</h1>
-            <div class="d-flex">
+            <div class="d-flex align-items-center">
                 <p class="subtitle-bestsellers">Combined Print & E-Book Fiction</p> 
-                <figure><img src="../images/flecha.png" alt="Flecha"></figure>
+                <figure class="flecha"></figure>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
                 <div class="card">
-                    <figure><img src="../images/imagesbestsellers\9781984818416.jpg" class="card-img-top" alt="WISH YOU WERE HERE"></figure>
+                    <figure class="container-img"><img src="../images/imagesbestsellers\9781984818416.jpg" class="card-img-top" alt="WISH YOU WERE HERE"></figure>
                     <div class="card-body">
                     <h3 class="card-title fw-bold">WISH YOU WERE HERE</h3>
                     <p class="card-text"><small class="text-muted">Jodi Picoult</small></p>
@@ -141,9 +142,9 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex">
-                <p class="mb-4 fw-bold subtitle-bestsellers">Combined Print & E-Book Nonfiction</p> 
-                <figure><img src="../images/flecha.png" alt="Flecha"></figure>
+            <div class="d-flex align-items-center">
+                <p class="subtitle-bestsellers">Combined Print & E-Book Nonfiction</p> 
+                <figure class="flecha"></figure>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
@@ -202,9 +203,9 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex">
-                <p class="subtitle-bestsellers">Paperback Trade Fiction</p>
-                <figure><img src="../images/flecha.png" alt="Flecha"></figure>
+            <div class="d-flex align-items-center">
+                <p class="subtitle-bestsellers">Paperback Trade Fiction</p> 
+                <figure class="flecha"></figure>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
@@ -266,17 +267,19 @@
         </article>
         <footer class="container-fluid p-0 bg-light mt-5">
             <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-              <figure>
-                <img src="../images/book.png" alt="Book">
+              <figure class="img-banner">
               </figure>
               <p class="animate__animated animate__pulse">All rights reserved</p>
               <div class="rrss">
-                <div><a rel="noopener" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                <div><a rel="noopener" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                <div><a rel="noopener" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+                <div class="rrss-fb"><a rel="noopener" href="#">
+                </a></div>
+                <div class="rrss-ig"><a rel="noopener" href="#">
+                </a></div>
+                <div class="rrss-tw"><a rel="noopener" href="#">
+                </a></div>
               </div>
             </div>
-        </footer>
+          </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
