--- a/section/contact.html
+++ b/section/contact.html
@@ -16,8 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-      <figure>
-        <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
+      <figure class="img-banner">
       </figure>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
@@ -37,7 +36,7 @@
                 <a class="nav-link" href="../section/kids.html">Kids</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../section/contact.html">Contact</a>
+                <a class="nav-link active" href="../section/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex justify-content-end">
@@ -82,29 +81,31 @@
           </div>
           </div>
           <div class="d-flex justify-content-center">
-          <button type="reset" class="button__reset m-2">Clean</button>
-          <button type="submit" class="button__submit m-2">Submit</button>
+          <button type="reset" class="button__reset m-2 color-change-2x">Clean</button>
+          <button type="submit" class="button__submit m-2 color-change-2x-submit">Submit</button>
           </div>
         </form>
       </div>
     </section>
-    <section class="container mt-5">
-      <h1 class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">Or you can download our app!</h1>
-        <div class="rrss d-flex justify-content-center mt-5">
-          <figure class="m-4"><a rel="noopener" class="p-2" href="#"><img src="../images/google-play.png" alt="Google Play"></a></figure>
-          <figure class="m-4"><a rel="noopener" class="p-2" href="#"><img src="../images/app-store.png" alt="App Store"></a></figure>
+    <section class="container mt-5 d-flex flex-column align-items-center">
+      <h1 class="d-flex justify-content-center title__bestsellers text-focus-in mb-3">Or you can download our app!</h1>
+        <div class="rrss-download d-flex justify-content-around mt-5">
+          <figure class="rrss-googleplay"><a rel="noopener" class="d-block" href="#"></a></figure>
+          <figure class="rrss-appstore"><a rel="noopener" class="d-block" href="#"></a></figure>
         </div>
     </section>
     <footer class="container-fluid p-0 bg-light mt-5">
       <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-        <figure>
-          <img src="../images/book.png" alt="Book">
+        <figure class="img-banner">
         </figure>
         <p class="animate__animated animate__pulse">All rights reserved</p>
         <div class="rrss">
-          <div><a rel="noopener" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-          <div><a rel="noopener" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-          <div><a rel="noopener" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+          <div class="rrss-fb"><a rel="noopener" href="#">
+          </a></div>
+          <div class="rrss-ig"><a rel="noopener" href="#">
+          </a></div>
+          <div class="rrss-tw"><a rel="noopener" href="#">
+          </a></div>
         </div>
       </div>
     </footer>
