--- a/section/genre.html
+++ b/section/genre.html
@@ -16,35 +16,34 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-        <figure>
-          <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
-        </figure>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../section/genre.html">Genre</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="../section/kids.html">Kids</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="../section/contact.html">Contact</a>
-              </li>
-            </ul>
-            <form class="d-flex justify-content-end">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary border-0" type="submit">Search</button>
-            </form>
-          </div>
+      <figure class="img-banner">
+      </figure>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="../section/genre.html">Genre</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="../section/kids.html">Kids</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../section/contact.html">Contact</a>
+            </li>
+          </ul>
+          <form class="d-flex justify-content-end">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-secondary border-0" type="submit">Search</button>
+          </form>
+        </div>
     </nav>
     <section class="container padding-section">
         <h1 class="title__bestsellers anima animate__animated animate__backInLeft ">What Is a Genre?</h1>
@@ -145,17 +144,19 @@
         </article>
     </section>
     <footer class="container-fluid p-0 bg-light mt-5">
-        <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-          <figure>
-            <img src="../images/book.png" alt="Book">
-          </figure>
-          <p class="animate__animated animate__pulse">All rights reserved</p>
-          <div class="rrss">
-            <div><a rel="noopener" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-            <div><a rel="noopener" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-            <div><a rel="noopener" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
-          </div>
+      <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+        <figure class="img-banner">
+        </figure>
+        <p class="animate__animated animate__pulse">All rights reserved</p>
+        <div class="rrss">
+          <div class="rrss-fb"><a rel="noopener" href="#">
+          </a></div>
+          <div class="rrss-ig"><a rel="noopener" href="#">
+          </a></div>
+          <div class="rrss-tw"><a rel="noopener" href="#">
+          </a></div>
         </div>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
